--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body{
   margin: 0;
   line-height: 1.5;
   font-size: 16px;
+  font-weight: 400;
+  background-color: #f3f2f1;
+}
+*:not(i){
+  font-family: 'Roboto', sans-serif;
 }
 *{
   margin: 0;
@@ -83,18 +88,45 @@ align-items: center;
   color: #f88ff9;
   font-size: 15px;
   text-transform: uppercase;
+  text-decoration: none;
+  transition:color 0.5s ease;
 }
 .home{
   min-height: 100vh;
-  background-color: gray;
+ position: relative;
 
 }
 .home .slide{
   background-position: center;
   background-size: cover;
-  position: relative;
+  position: absolute;
   z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
 
+
+}
+
+.home .slide.active .home-content h1{
+  opacity: 0;
+  animation: fadeInTop 1s ease forwards;
+}
+@keyframes fadeInTop{
+  0%{
+    transform: translateY(-50px);
+  }
+  100%{
+    opacity:1;
+    transform:translateY(0px);
+  }
+}
+.home .slide.active{
+  opacity: 1;
+  visibility: visible;
 }
  .home .slide::before{
   content: '';
@@ -104,118 +136,96 @@ align-items: center;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.7);
+  z-index: -1;
  }
 .home .row{
   min-height: 100vh;
   
 }
+.home .home-content{
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 15px;
+  text-align: center;
+}
 
-/* body{
-  background: url(./pic\ 2.jpeg);
-  background-size: cover;
+.home .home-content h1{
+  font-size: 80px;
+  color: #f88ff9;
   margin: 0;
-  padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+  font-weight: normal;
+  font-family: "Great Vibes";
 }
-.navbar{
-  overflow: hidden;
-  background: #014421;
-  margin-top: -10px;
-   align-items: center;
+.home .slide.active .home-content p{
+  opacity: 0;
+  animation: fadeInTop 1s ease forwards;
+  -animation-delay: 0.5s;
 }
-.navbar a{
-  color: blueviolet;
-  text-align: center;
-  padding: 20px 16px;
-  font-size: 20px;
-  width: 100px;
- float: right;
- text-decoration: none;
- font-weight: 200;
- text-transform: uppercase;
-} */
-
-/* *{
- margin: 0px;
- padding: 0px;
- box-sizing: border-box;
-
- }
-
-.top-slider a {
-
-text-decoration: none;
+.home .home-content p{
+font-size: 24px;
 color: #f88ff9;
-font-size: 1.125rem;
+margin: 0 0 15px;
+
+}
+.home .slide.active .home-content span{
+  opacity: 0;
+  animation: fadeInTop 1s ease forwards;
+  -animation-delay: 1s;
+}
+.home .home-content span{
+  font-size: 20px;
+  display: inline-block;
+  border: 1px solid #fff;
+  border-radius: 30px;
+  padding: 7px 30px;
+  color: #fff;
+  margin: 15px 0 0;
 }
 
-.top-slider ul li{
-    display: inline-block;
-  justify-content: center;
+.story-section{
+  padding: 80px 0 80px;
 }
 
-.bg-image{
-  height: 150vh;
-  width: 100vw;
-  min-height: 380px;
-  background-image: url('./pic\ 2.jpeg');
-  
- 
-} 
+.story-section .story-content{
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+.story-section .story-item i{
+  display: none;
 
-.text-overlay{
-  width: 100%;
-  height: 100%;
-  font-size: 48px;
+}
+.story-section .story-item{
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
- 
- 
+  flex-wrap: wrap;
+  flex: 0 0 100%;
+  max-width: 100%;
+
+
+}
+.story-section .story-text{
+  background-color: red;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.story-section .story-img{
+  background-color: blue;
+  flex: 0 0 50%;
 }
 
- .top-menu{
-  width: 100%;
-  height: 100%;
 
-  display: flex;
-  
-  
- 
-} 
-.topnav {
-  overflow: hidden;
-  background-color: #014421;
+.section-title{
+flex: 0 0 100%;
+max-width: 100%;
+padding: 0 15px;
+text-align: center;
+margin-bottom: 60px;
+
 }
-.container {
-  position: absolute;
- 
-  width: auto;
+.section-title h2{
+  font-size: 45px;
+  color: #f88ff9;
+  font-weight: 700;
+  font-family: "Great Vibes";
+  letter-spacing: 2px;
+  margin: 0%;
 }
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 30px 200px;
-  text-decoration: none;
-  font-size: 17px;
-}
-.bg-img {
-  
-  background-image: url("./couple-g77b498264_1280.jpg");
-
-  min-height: 380px;
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  position: relative;
-}
-.topnav a:hover {
-  background-color: green;
-  color: black;
-} */
